--- a/src/stylesheets/views/_home.scss
+++ b/src/stylesheets/views/_home.scss
@@ -11,7 +11,7 @@
     background-size: cover;
     display: flex;
     flex-direction: column;
-    min-height: 50rem;
+    min-height: 32rem;
     padding: $lineheight 2%;
     z-index: 3;
 
@@ -24,18 +24,18 @@
     h1 {
       font-size: 4.5rem;
       line-height: 1.1;
-      margin: 10rem 0 $lineheight / 2;
+      margin: 5rem 0 $lineheight / 2;
       position: relative;
 
-      &:after {
-        color: $color-white;
-        content: 'Gothenburg';
-        font-family: "bariol_regularregular";
-        font-size: 1rem;
-        position: absolute;
-        right: 0;
-        top: 0;
-      }
+      // &:after {
+      //   color: $color-white;
+      //   content: 'Gothenburg';
+      //   font-family: "bariol_regularregular";
+      //   font-size: 1rem;
+      //   position: absolute;
+      //   right: 0;
+      //   top: 0;
+      // }
     }
 
     h2 {
@@ -44,6 +44,7 @@
       font-weight: 400;
       letter-spacing: 1px;
       line-height: 1.8rem;
+      margin: 3rem 0 $lineheight / 2;
       margin-left: 1rem;
     }
 
@@ -82,6 +83,7 @@
     }
 
     .buttons {
+      margin: 3rem 0 $lineheight / 2;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -128,17 +130,11 @@
       }
     }
 
-    @include fadeIn(
-      $duration: 750ms,
-      $delay: 750ms,
-      $function: ease,
-      $fill: both
-    );
 
     h1, h2, .btn, .date-banner {
       @include fadeIn(
         $duration: 500ms,
-        $delay: 1500ms,
+        $delay: 500ms,
         $function: ease,
         $fill: both
       );
@@ -173,21 +169,6 @@
       flex-flow: column wrap;
     }
 
-    & > * {
-      opacity: 0;
-    }
-
-    & > * {
-      opacity: 0;
-    }
-
-    &.seen  > * {
-      @include fadeInUp(
-        $duration: 750ms,
-        $function: ease,
-        $fill: both
-      );
-    }
   }
 
 
@@ -199,7 +180,6 @@
     align-items: center;
     padding: $lineheight*4 10%;
     z-index: 3;
-
     &__text {
       &__header {
         color: $color-white;
@@ -249,14 +229,6 @@
       }
     }
 
-
-    &.seen > * {
-      @include fadeInUp(
-        $duration: 750ms,
-        $function: ease,
-        $fill: both
-      );
-    }
   }
 
 
@@ -359,7 +331,7 @@
     }
   }
 
-  .hack {
+  .organize {
     background-color: $color-blue;
     display: flex;
     flex-flow: row wrap;
@@ -377,17 +349,6 @@
       display: flex;
       flex-flow: column wrap;
     }
-    & > article {
-      opacity: 0;
-    }
-    &.seen  > article {
-
-      @include fadeInUp(
-        $duration: 750ms,
-        $function: ease,
-        $fill: both
-      );
-    }
   }
 
   .faq {
@@ -403,7 +364,7 @@
   }
 
   .contact {
-    background-color: $color-orange;
+    background-color: $color-white;
     display: flex;
     flex-flow: row wrap;
     align-items: stretch;
@@ -414,12 +375,15 @@
     &__text {
       flex: 1;
       &__header {
-        color: $color-white;
+        color: $color-blue;
       }
 
-      color: $color-white;
+      color: $color-black;
       display: flex;
       flex-flow: column wrap;
+      a {
+        color: $color-orange;
+      }
     }
   }
 }
