--- a/src/templates/layouts/default.jade
+++ b/src/templates/layouts/default.jade
@@ -16,6 +16,8 @@ html
       ga('send', 'pageview');
     link(href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css')
     link(rel='stylesheet' href='/styles/main.css')
+    link(href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css')
   body(class="#{title}")
     block content
     script(src='//maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js')
