--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -5,13 +5,12 @@ block vars
 block content
   header(role='banner')
     section
-      h1 Hack for Refugees
-      h3.date-banner 5 - 6 December 2015
-      h2 Nobody can do everything, <br>but everybody can do something.
+      h1 dApp-athon
+      h3.date-banner 27 July 2016
+      h2 Build a decentralized<br>future - reimagined
 
       span.buttons
         a.btn(href='#hack') Want to attend?
-        a.btn.btn--outlined.btn--white(href='/suggest' target="_blank") Suggest a project
 
   main(role="main")
     section.motivation
@@ -123,60 +122,24 @@ block content
     //- section.organisers
     section#sponsors.sponsors
       article.sponsors__text
-        h1.sponsors__text__header Partners
-        ul
-          li
-            figure
-              a(href="http://burt.io/")
-                img(src="/images/sponsors/burt_logo_positive.png")
-          li
-            figure
-              a(href="http://www.interaktionsbyran.se/")
-                img(src="/images/sponsors/interaktionsbyran-logo.png")
-          li
-            figure
-              a(href="http://www.safersociety.com/")
-                img(src="/images/sponsors/logo-safer-society-group-cmyk.png")
-          li
-            figure
-              a(href="https://www.recordedfuture.com/")
-                img(src="/images/sponsors/RecordedFutureBlack.png")
+        h1.sponsors__text__header Sponsors
         ul.three
           li
             figure
-              a(href="http://www.yaki-da.se/")
-                img(src="/images/sponsors/yaki-da.png")
+              a(href="http://www.consensys.net/")
+                img(src="/images/sponsors/sponsor-consensys.png")
           li
             figure
-              a(href="http://www.redbull.com/")
-                img(src="/images/sponsors/Red_Bull.svg")
+              a(href="http://www.microsoft.com/")
+                img(src="/images/sponsors/sponsor-microsoft.png")
           li
             figure
-              a(href="http://www.bergstrands.se/")
-                img(src="/images/sponsors/bergstrands_kafferosteri.png")
+              a(href="http://www.smartcontract.jp/")
+                img(src="/images/sponsors/sponsor-smartcontract.png")
           li
             figure
-              a(href="http://www.mooncoffee.se/")
-                img(src="/images/sponsors/moon_svart.png")
-
-
-          li
-            figure
-              a(href="http://www.wakalstreetfood.se/")
-                img(src="/images/sponsors/wakal-trans.png")
-          li
-            figure
-              a(href="http://falcon.se/")
-                img(src="/images/sponsors/RAW_LOGO-01.png")
-          li
-            figure
-              a(href="http://www.llamalloyd.se/")
-                img(src="/images/sponsors/llamaENDASTlama.png")
-
-          li
-            figure
-              a(href="http://www.oatly.com/")
-                img(src="/images/sponsors/Oatly_logga.png")
+              a(href="https://www.ethereum.org/")
+                img(src="/images/sponsors/sponsor-ethereum.png")
 
 
     section.contact
