--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -15,108 +15,45 @@ block content
   main(role="main")
     section.motivation
       article.motivation__text
-        h1.motivation__text__header Hello, good to see you here!
+        h1.motivation__text__header Heading
         p.
-          Currently there are several millions of people that have been forced to flee from their home countries and become refugees. Sweden is one of the countries that take in most refugees per capita, this year 140-150 thousand refugees are expected to arrive in Sweden. This is a huge increase from previous years, causing major challenges for the organisations trying to help the refugees. Several of these challenges can be solved with IT.
-
-    section#cases.cases
-      article.cases__text
-        h1.cases__text__header Proposed Ideas
-        p.
-          We have a list of proposed ideas that organisations and individuals have handed to us, see some examples below or check them all out #[a(class="color-white" href='https://docs.google.com/document/d/1toLS0xmy4wLRhNSdT47fN1lp6tIaDE_Z1Pz550KirR4/edit' target='_blank') here].
-        ul
-          li
-            figure
-              img.heart(src="/images/icons/heart.svg")
-            h2 Reunite
-            p A site dedicated to refugees who accidentally got away from friends or family during their escape, providing them help to find their loved ones again.
-          li
-            figure
-              img(src="/images/icons/beer.svg")
-            h2 Refugee Event
-            p A web application where people who arrange activities for refugees can add their events, as well as a place where refugees can get information about upcoming events.
-          li
-            figure
-              img(src="/images/icons/smile.svg")
-            h2 Blending Matching
-            p A platform providing possibilities to match families (refugee families with swedish families) that wants to do fun stuff together.
-
-          li
-            figure
-              img(src="/images/icons/phone.svg")
-            h2 Refugee Phones Support System
-            p A web application to support Refugee Phones in their awesome work of delivering phones to the ones who needs it the most. The application could for example support logging of the in- and outflow of phones, donations from companies or individuals, as well as functionality for ordering phones for refugees.
-          li
-            figure
-              img(src="/images/icons/talk.svg")
-            h2 400contacts Instant Messaging
-            p A platform for connecting refugees with local professionals and let mentors and and adepts communicate easily though instant messaging. This as a way to help refugees with engineering background get their first skilled job in Sweden.
-
-          li
-            figure
-              img(src="/images/icons/hands.svg")
-            h2 Scheduling Volunteers
-            p An app for scheduling volunteers at refugee homes and a place where volunteers can register that they’re willing to help. Security is a recurring problem at refugee homes, so this registration needs to have some kind of strong authentication, preferable bank-id or something similar.
-
-
-      footer.cases__text
-        h1.cases__text__header More ideas?
-        p Do you have any ideas for challenges you think should be addressed at the hack? Or would you like to help out? If so, please let us know!
-
-        span.buttons
-          a.btn.btn--outlined.btn--white(href='/suggest' target="_blank") Suggest a case
-          span.buttons
-          a.btn.btn--white(href='/contact' target="_blank") Help out :)
-
+          Lorem ipsum
     section#hack.hack
       article.hack__text
         h1.hack__text__header The hack
-        p.
-          On the 5-6 of December we are organizing Hack for Refugees, where we will gather a large group of programmers, designers and other tech people. Together we will try to build as many tools as possible that could be helpful for both the refugees and the volunteers.
-        p.
-          Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
-
-        h
-        p
-          b.
-            Oh boy, that was quick!
-          span.
-            We've already filled all available spots! All registrars
-            from now on will be put on a waiting list, and if a spot is available, we'll let you know.
+        p We are inviting all attendees of   
+            a(href="http://smartcon2016.jp/") Smart Contract Conference Japan 2016
+            to participate in a one-day hackathon during the second day of the conference.
+        p Developers, designers, business-people are all welcome to patricipate.
+        p You can come as part of a team, but we will mix and match teams during the first day of the conference.
 
         span.buttons
           br
-          a.btn.btn--orange(href='/register' target="_blank") Sign up for the waiting list
+          a.btn.btn--orange(href='/register' target="_blank") Sign up now
 
         p
           h2.hack__text__header Location
           span
-            a(href="https://goo.gl/maps/JLHmvfAhHDE2" target="_blank") Burt - Vallgatan 27, Gothenburg
+            a(href="https://goo.gl/maps/uupjZQUzpUE2" target="_blank") Toranomon Hills Forum
+
 
       div(id="google-maps")
 
     section.faq
       article.faq__text
         h1.faq__text__header Frequently asked Questions
-        h2.faq__text__header When can we start hacking?
+        h2.faq__text__header I am not a developer....
         p.
-          Whenever you want! If you want to get going right away, just send us a message  and tell us what you want to work on so we can make sure no teams build the same solution. But the actual hack starts at Burt on Saturday the 5th of December at 09:00. You can keep hacking there until 16:50 on Sunday the 6th, when you’ll get to show off what you’ve done!
+          No problem! All attendees of the conference are welcome to attend and we will do our best to create balanced teams for those of you who are not yet part of a team. We will have coaching on-spot.
 
-        h2.faq__text__header Will there be food?
+        h2.faq__text__header How should I prepare?
         p.
-          Hell’s yeah. Breakfast, lunch and dinner on Saturday, and breakfast and lunch on Sunday!
+          Deploy your first contract to Azure's Blockchain-as-a-service.
 
-        h2.faq__text__header I don’t know what to hack on!
-        p.
-          Don’t worry! Just bring a towel and have a look at the cases section.
 
-        h2.faq__text__header We want to hack as a team, is that possible?
-
-        p.
-          It is! Either have the teammates enter the same team name when registering, or just show up and sit next to each other on hack day :)
         h2.faq__text__header Will there be prizes?
         p.
-          Karma. Loads. And possibly something more tangible as well.
+          Yes. Stay tuned for details.
     //- section.sponsors
     //- section.speakers
     //- section.organisers
@@ -146,5 +83,5 @@ block content
       article.contact__text
         h1.contact__text__header Contact
         p.
-          This event is all about doing things together, if you have any ideas or would like to help out, we would love hear from you. Just send us an email at
-          #[a(class="color-white" href='mailto:hello@hackforrefugees.com') hello@hackforrefugees.com]
+          If you have any questions about the hackathon, please just send an email to
+          #[a(class="color-white" href='mailto:robert@smartcontract.jp') robert@smartcontract.jp]
