--- a/src/templates/views/register/index.jade
+++ b/src/templates/views/register/index.jade
@@ -4,5 +4,5 @@ block vars
   - var title = "rsvp";
 
 block content
-  iframe#typeform-full(width='100%', height='100%', frameborder='0', src='https://pierrereimertz.typeform.com/to/Eb6XW5')
+  iframe#typeform-full(width='100%', height='100%', frameborder='0', src='https://legogris.typeform.com/to/DLiYy5')
     script(type='text/javascript', src='https://s3-eu-west-1.amazonaws.com/share.typeform.com/embed.js')
